# RVINN

./: LICENSE  README.md  setup.cfg
RVINN/: modules.py  rvinn.py  train.py
data/: TAM_MCF7_normalized_Sp_df.csv  TAM_MCF7_normalized_Un_df.csv
demo/: HALLMARK_ESTROGEN_RESPONSE_EARLY.txt  parallelization_demo.ipynb  rvinn_demo.ipynb
src/: __init__.py
src/rvinn/: __init__.py  model.py  rvinn.py  train.py  ut.py
