[metadata]
name = rvinn
version = 0.1.0
#description = 
#author = 
#author_email =
keywords = physics-informed neural networks, transcription, post-transcriptional regulation, gene expression
long_description = file: README.md
#long_description_content_type = 
url = https://github.com/omuto/RVINN
project_urls =
   Source = https://github.com/omuto/RVINN
   Tracker = https://github.com/omuto/RVINN/issues

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
# classifiers =
#     Intended Audience :: Science/Research
#     License :: OSI Approved :: MIT License
#     Natural Language :: Japanese
#     Operating System :: MacOS :: MacOS X
#     Operating System :: POSIX :: Linux
#     Programming Language :: Python :: 3
#     Programming Language :: Python :: 3.12

[options]
#zip_safe = False
packages = find:
package_dir =
    = src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.0
#install_requires =
#    torch>=1.10.1

[options.packages.find]
where = src