[metadata]
name = rvinn
version = 0.1.0
keywords = physics-informed neural networks, transcription, post-transcriptional regulation, gene expression
long_description = file: README.md
#long_description_content_type = 
url = https://github.com/omuto/RVINN
project_urls =
   Source = https://github.com/omuto/RVINN
   Tracker = https://github.com/omuto/RVINN/issues

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
#zip_safe = False
packages = find:
package_dir =
    = src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.0
install_requires =
    torch >= 2.0.0
    numpy 
    pandas
    matplotlib

[options.packages.find]
where = src